--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
     color: cornflowerblue;
-    background-color: floralwhite;
+    background-color: black;
 }
+
