--- a/templates/card.html
+++ b/templates/card.html
@@ -3,26 +3,24 @@
 {% block title %}Flash Card{% endblock %}
 
 {% block content %}
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='button.css') }}">
 <h1> Flash Card</h1>
     Question: {{ card.question }} <br>
     Answer: {{ card.answer }}
     <p>
-        <button>
-            <a href="{{ url_for('welcome') }}">
+            <a href="{{ url_for('welcome') }}" class="button4" style="background-color: deeppink">
                 Welcome Page
             </a>
-        </button>
-        <button>
         {% if index < max_index %}
-            <a href="{{ url_for('card_view', index=index + 1)}}">
+            <a href="{{ url_for('card_view', index=index + 1)}}" class="button4" style="background-color:#f14e4e">
                 Next card
             </a>
         {% else %}
-            <a href="{{ url_for('card_view', index=0)}}">
+            <a href="{{ url_for('card_view', index=0)}}" class="button4" style="background-color:#84f14e">
                 Start Again
             </a>
         {% endif %}
-        </button>
     </p>
     <a href="{{  url_for('remove_card', index=index) }}">Remove this card</a>
 {% endblock %}
